external-projects/sui-prover/crates/sui-prover/tests/snapshots/uninterpreted/simple.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 287
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/uninterpreted/simple.ok.move:17:5
   │
17 │     ensures(result == 42); // should fail with uninterpreted
   │     ^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/uninterpreted/simple.ok.move:16: foo_spec
